vsaas-kubernetes/vsaas-nginx-controller/test-app/service.yaml
# test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  namespace: test
spec:
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 23050
      targetPort: 23050
  type: ClusterIP
